versions/v3.7.0/boards/ezurio/bt510/doc/bt510.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/boards/ezurio/bt510/doc/bt510.html
original_path: boards/ezurio/bt510/doc/bt510.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# Ezurio Sentrius BT510 Sensor

## Overview

The Sentrius™ BT510 Sensor is a battery powered, Bluetooth v5 Long Range integrated sensor that uses a Nordic Semiconductor nRF52840 ARM Cortex-M4F CPU.

The sensor has the following features:

- ADC
- CLOCK
- FLASH
- GPIO
- I2C
- MPU
- NVIC
- PWM
- RADIO (Bluetooth Low Energy and 802.15.4)
- RTC
- Segger RTT (RTT Console)
- UART
- WDT

![Sentrius BT510 Sensor, front view](https://docs.zephyrproject.org/3.7.0/_images/bt510.jpg)

Sentrius BT510 Sensor, front view

![Sentrius BT510 Sensor, rear view](https://docs.zephyrproject.org/3.7.0/_images/bt510_back.jpg)

Sentrius BT510 Sensor, rear view

More information about the board can be found at the
[Sentrius BT510 website](https://www.ezurio.com/iot-devices/iot-sensors/bt510-bluetooth-5-long-range-ip67-multi-sensor) [[1]](#id4).

## Hardware

### Supported Features

The BT510 Sensor supports the following
hardware features:

| Interface | Controller | Driver/Component |
| --- | --- | --- |
| ADC | on-chip | adc |
| CLOCK | on-chip | clock\_control |
| FLASH | on-chip | flash |
| GPIO | on-chip | gpio |
| I2C(M) | on-chip | i2c |
| MPU | on-chip | arch/arm |
| NVIC | on-chip | arch/arm |
| PWM | on-chip | pwm |
| RADIO | on-chip | Bluetooth, ieee802154 |
| RTC | on-chip | system clock |
| RTT | Segger | console |
| UART | on-chip | serial |
| WDT | on-chip | watchdog |

### Connections and IOs

#### LED

Two LEDs are visible through the BT510 housing lid.

- LED\_1A (green) = P0.22
- LED\_1B (red) = P0.20

#### Push button

The BT510 housing lid also acts as a push button.

- BUTTON\_1 = SW1 = P1.10

#### Magnetoresistive sensor

The BT510 incorporates a Honeywell SM351LT magnetoresistive sensor. Refer to the [Honeywell SM351LT datasheet](https://sensing.honeywell.com/honeywell-sensing-nanopower-series-datasheet-50095501-c-en.pdf) [[7]](#id16) for further details.

- MAG = P1.14

#### Accelerometer

The BT510 incorporates an I2C ST Microelectronics LIS2DH accelerometer. Refer to the [ST Microelectronics LIS2DH datasheet](https://www.st.com/resource/en/datasheet/lis2dh.pdf) [[6]](#id14) for further details.

- SDA = P0.26
- SCL = P0.27
- INT\_1 = P1.05
- INT\_2 = P1.12

#### Temperature Sensor

The BT510 incorporates an I2C Silabs SI7055 temperature sensor. Refer to the [Silabs 7055 datasheet](https://www.silabs.com/documents/public/data-sheets/Si7050-1-3-4-5-A20.pdf) [[5]](#id12) for further details.

- SDA = P0.26
- SCL = P0.27

## Programming and Debugging

Applications for the `bt510` board configuration can be built, flashed, and
debugged in the usual way. See [Building an Application](../../../../develop/application/index.md#build-an-application) and
[Run an Application](../../../../develop/application/index.md#application-run) for more details on building and running.

The BT510 features a TagConnect 10 way socket for connection of a
programmer/debugger, refer to [TagConnect TC2050 product page](https://www.tag-connect.com/product/tc2050-idc-050) [[2]](#id6)
for details of an appropriate TagConnect cable.

A non-standard layout is used to include access to the sensor debug UART.

| Pin No. | Name | Description |
| --- | --- | --- |
| 1 | Vcc | Power Supply, 3.3V |
| 2 | SWDIO | SWD Data |
| 3 | RXD | Debug UART RX Data |
| 4 | SWDCLK | SWD Clock |
| 5 | TM | Spare GPIO |
| 6 | SWO | SWD Output |
| 7 | N/C | Not Connected |
| 8 | TXD | Debug UART TX Data |
| 9 | GND | Ground |
| 10 | RESET | Reset, Active Low |

Connectivity to the programmer/debugger must be modified to match
the pinout shown above.

Ezurio provide the USB-SWD programming board (750-03239) that supports
this connector layout, refer to the [USB SWD Programmer product page](https://www.ezurio.com/wireless-modules/programming-kits/usb-swd-programming-kit) [[3]](#id8)
.

### Flashing

To connect the BT510 board for programming or debugging using the USB-SWD programming
board, on the programming board set SW6 to the supply out position and SW5 to the 3V3
position, ensure there is a jumper on J35 and that SW1 is in the debug position, then
connect the BT510 to the board using the Tag-Connect cable via J3:

![Sentrius BT510 Sensor connected to programming board](https://docs.zephyrproject.org/3.7.0/_images/bt510_prog.jpg)

Sentrius BT510 Sensor connected to programming board

Then build and flash applications as usual (see [Building an Application](../../../../develop/application/index.md#build-an-application) and
[Run an Application](../../../../develop/application/index.md#application-run) for more details). For example, to flash:

```shell
$ ninja flash
```

Here is an example for the [Hello World](../../../../samples/hello_world/README.md#hello-world) application.

First, run your favorite terminal program to listen for output.

NOTE: On the BT510, the UART lines are at TTL levels and must be passed through
an appropriate line driver circuit for translation to RS232 levels. Refer to the [MAX3232 datasheet](https://www.ti.com/lit/ds/symlink/max3232.pdf) [[4]](#id10)
for a suitable driver IC. The USB-SWD programming board has an in-built UART connected
to the BT510 acting as a USB CDC port, on Linux and Windows 10 this driver should be
installed automatically, for Windows 7, the MBED driver is required to use the serial
port - see the [MBED Serial Driver](https://os.mbed.com/docs/mbed-os/v6.8/program-setup/windows-serial-driver.html) [[8]](#id18) link for details and how to install the driver.

```shell
$ minicom -D <tty_device> -b 115200
```

Replace `<tty_device>` with the port where the bt510 can be found. For example, under Linux, `/dev/ttyACM0`.

Then build and flash the application in the usual way.

```shell
# From the root of the zephyr repository
west build -b bt510 samples/hello_world
west flash
```

Note that an external debugger is required to perform application flashing.

### Debugging

The `bt510` board does not have an on-board J-Link debug IC
as some nRF5x development boards, however, instructions from the
[Nordic nRF5x Segger J-Link](../../../../develop/flash_debug/nordic_segger.md#nordic-segger) page also apply to this board, with the additional step
of connecting an external debugger. The USB-SWD programmer board has a CMSIS debugger
compatible interface and debugging can be performed using pyocd, openocd or any other
applications that support the CMSIS interface.

## Testing Bluetooth on the BT510

Many of the Bluetooth examples will work on the BT510.
Try them out:

- [Bluetooth: Peripheral](../../../../samples/bluetooth/peripheral/README.md#ble-peripheral)
- [Bluetooth: Eddystone](../../../../samples/bluetooth/eddystone/README.md#bluetooth-eddystone-sample)
- [Bluetooth: iBeacon](../../../../samples/bluetooth/ibeacon/README.md#bluetooth-ibeacon-sample)

## Testing the LEDs and buttons on the BT510

There are 2 samples that allow you to test that the buttons (switches) and LEDs on
the board are working properly with Zephyr:

- [Blinky](../../../../samples/basic/blinky/README.md#blinky "Blink an LED forever using the GPIO API.")
- [Button](../../../../samples/basic/button/README.md#button "Handle GPIO inputs with interrupts.")

You can build and flash the examples to make sure Zephyr is running correctly on
your board. The button, LED and sensor device definitions can be found in
[boards/ezurio/bt510/bt510.dts](https://github.com/zephyrproject-rtos/zephyr/blob/main/boards/ezurio/bt510/bt510.dts).

## References

[[1](#id5)]

[https://www.ezurio.com/iot-devices/iot-sensors/bt510-bluetooth-5-long-range-ip67-multi-sensor](https://www.ezurio.com/iot-devices/iot-sensors/bt510-bluetooth-5-long-range-ip67-multi-sensor)

[[2](#id7)]

[https://www.tag-connect.com/product/tc2050-idc-050](https://www.tag-connect.com/product/tc2050-idc-050)

[[3](#id9)]

[https://www.ezurio.com/wireless-modules/programming-kits/usb-swd-programming-kit](https://www.ezurio.com/wireless-modules/programming-kits/usb-swd-programming-kit)

[[4](#id11)]

[https://www.ti.com/lit/ds/symlink/max3232.pdf](https://www.ti.com/lit/ds/symlink/max3232.pdf)

[[5](#id13)]

[https://www.silabs.com/documents/public/data-sheets/Si7050-1-3-4-5-A20.pdf](https://www.silabs.com/documents/public/data-sheets/Si7050-1-3-4-5-A20.pdf)

[[6](#id15)]

[https://www.st.com/resource/en/datasheet/lis2dh.pdf](https://www.st.com/resource/en/datasheet/lis2dh.pdf)

[[7](#id17)]

[https://sensing.honeywell.com/honeywell-sensing-nanopower-series-datasheet-50095501-c-en.pdf](https://sensing.honeywell.com/honeywell-sensing-nanopower-series-datasheet-50095501-c-en.pdf)

[[8](#id19)]

[https://os.mbed.com/docs/mbed-os/v6.8/program-setup/windows-serial-driver.html](https://os.mbed.com/docs/mbed-os/v6.8/program-setup/windows-serial-driver.html)
